GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/Journey_Type_By_PNR__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for Journey Type prefilling</description>
    <label>Journey Type by PNR</label>
</CustomObject>