GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Amsterdam_Roterdam__c.field-meta.xml
<CustomField>
    <fullName>Amsterdam_Roterdam__c</fullName>
    <label>Amsterdam_Roterdam</label>
    <type>TextArea</type>
</CustomField>