GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Belgian_and_Dutch__c.field-meta.xml
<CustomField>
    <fullName>Belgian_and_Dutch__c</fullName>
    <label>Belgian and Dutch</label>
    <type>TextArea</type>
</CustomField>