GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Child_fare__c.field-meta.xml
<CustomField>
    <fullName>Child_fare__c</fullName>
    <label>Child fare</label>
    <type>TextArea</type>
</CustomField>