GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Concession_Core__c.field-meta.xml
<CustomField>
    <fullName>Concession_Core__c</fullName>
    <label>Concession Core</label>
    <type>TextArea</type>
</CustomField>