GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Concession_Other__c.field-meta.xml
<CustomField>
    <fullName>Concession_Other__c</fullName>
    <label>Concession Other</label>
    <type>TextArea</type>
</CustomField>