GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Disney__c.field-meta.xml
<CustomField>
    <fullName>Disney__c</fullName>
    <label>Disney</label>
    <type>TextArea</type>
</CustomField>