GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/French_provinces__c.field-meta.xml
<CustomField>
    <fullName>French_provinces__c</fullName>
    <label>French provinces</label>
    <type>TextArea</type>
</CustomField>