GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Inter_caps__c.field-meta.xml
<CustomField>
    <fullName>Inter_caps__c</fullName>
    <label>Inter caps</label>
    <type>TextArea</type>
</CustomField>