GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Interlinning_Domestic_rail__c.field-meta.xml
<CustomField>
    <fullName>Interlinning_Domestic_rail__c</fullName>
    <label>Interlinning or Domestic rail</label>
    <type>TextArea</type>
</CustomField>