GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Intra_schengen_LIU__c.field-meta.xml
<CustomField>
    <fullName>Intra_schengen_LIU__c</fullName>
    <label>Intra_schengen_LIU</label>
    <length>250</length>
    <type>Text</type>
</CustomField>