GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Intra_schengen_ROT_and_AMS__c.field-meta.xml
<CustomField>
    <fullName>Intra_schengen_ROT_and_AMS__c</fullName>
    <label>Intra schengen ROT and AMS</label>
    <type>TextArea</type>
</CustomField>