GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Lyon_South_of_France__c.field-meta.xml
<CustomField>
    <fullName>Lyon_South_of_France__c</fullName>
    <label>Sun routes</label>
    <type>TextArea</type>
</CustomField>