GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Passholder__c.field-meta.xml
<CustomField>
    <fullName>Passholder__c</fullName>
    <label>Passholder</label>
    <type>TextArea</type>
</CustomField>