GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Ski__c.field-meta.xml
<CustomField>
    <fullName>Ski__c</fullName>
    <label>Ski routes</label>
    <type>TextArea</type>
</CustomField>