GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Snap__c.field-meta.xml
<CustomField>
    <fullName>Snap__c</fullName>
    <label>Snap</label>
    <type>TextArea</type>
</CustomField>