GearsetPOC/force-app/main/default/objects/Journey_Type_By_PNR__c/fields/Thalys_Through_Fare__c.field-meta.xml
<CustomField>
    <fullName>Thalys_Through_Fare__c</fullName>
    <label>Thalys Through Fare</label>
    <type>TextArea</type>
</CustomField>